--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
 body {
   margin: 0;
   display: flex;
@@ -5,4 +7,5 @@ body {
   height: 100vh;
   align-items: center;
   background-color: salmon;
+  font-family: "Permanent Marker", cursive;
 }
